Update Profile links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dimitrios Zafeiris| Full-stack software Developer</title>
+		<title>Dimitrios Zafeiris</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,12 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Dimitris Zafeiris</h1>
-						<p>Junior Full-stack Developer &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<p><strong>Junior Software Developer</strong> | .NET | HTML/CSS/JS/TYPESCRIPT | ANGULAR/REACT | BOOTSTRAP/TAILWINDCSS </p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/dimizafe/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/zafeirisdimi" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:zafeiris.dimitris@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
