--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dimitrios Zafeiris</title>
+		<title>Dimitrios Zafeiris | <strong>Junior Software Developer</strong></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,13 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Dimitris Zafeiris</h1>
-						<p><strong>Junior Software Developer</strong> | .NET | HTML/CSS/JS/TYPESCRIPT | ANGULAR/REACT | BOOTSTRAP/TAILWINDCSS </p>
+						<p> <ul class="unordered-style">
+							<li>HTML/CSS/JS/TYPESCRIPT</li>
+							<li>ANGULAR/REACT </li>
+							<li>C# | .NET | ASP.NET MVC | Entity Framerowk</li>
+							<li>SQL / MySQL</li>
+							<li>BOOTSTRAP/TAILWINDCSS</li>
+						</ul> | |  </p>
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/dimizafe/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
