List Unordered style

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dimitrios Zafeiris | <strong>Junior Software Developer</strong></title>
+		<title>Dimitrios Zafeiris | Software Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Dimitris Zafeiris</h1>
+						<h1>Dimitris Zafeiris | Software Developer</h1>
 						<p> <ul class="unordered-style">
 							<li>HTML/CSS/JS/TYPESCRIPT</li>
 							<li>ANGULAR/REACT </li>
