--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Dimitris Zafeiris | Software Developer</h1>
+						<h1>Dimitris Zafeiris</h1><br>
+						<h2>Software Developer</h2>
 						<p> <ul class="unordered-style">
-							<li>HTML/CSS/JS/TYPESCRIPT</li>
-							<li>ANGULAR/REACT </li>
+							<li>HTML / CSS / JS / TYPESCRIPT</li>
+							<li>Angular / React </li>
 							<li>C# | .NET | ASP.NET MVC | Entity Framerowk</li>
 							<li>SQL / MySQL</li>
-							<li>BOOTSTRAP/TAILWINDCSS</li>
+							<li>Bootstrap / TailwindCSS</li>
 						</ul>  </p>
 						<nav>
 							<ul>
